kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-express-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: gke-express
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
